fix pnd-sub-info overflow

--- a/app/styles/annotation-sidebar.less
+++ b/app/styles/annotation-sidebar.less
@@ -415,7 +415,8 @@ body.pnd-annotation-sidebar-expanded {
                     border-bottom: 1px solid @gray-extra-light;
                     
                     	.pnd-sub-info {
-			                	padding: 5px 10px;  
+			                	padding: 5px 10px;
+			                	overflow-y: hidden; 
 			                    } 
                     
                         .pnd-annotation-details-item-header {
